[gd_scene load_steps=31 format=3 uid="uid://dcwk72gd4pjwl"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_au11u"]
[ext_resource type="Texture2D" uid="uid://o650vesvv4br" path="res://Player/Assets/Vampurr-Sheet.png" id="2_fm6vt"]
[ext_resource type="AudioStream" uid="uid://88qas5wkqgi8" path="res://Player/Assets/vampurr-jump.mp3" id="3_s5s15"]
[ext_resource type="AudioStream" uid="uid://b5hlyb713r7ga" path="res://Player/Assets/PlayerDie.mp3" id="4_ariov"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecbs4"]
size = Vector2(12, 14)

[sub_resource type="Animation" id="Animation_jimqq"]
resource_name = "Die"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"resetPlayer"
}]
}

[sub_resource type="Animation" id="Animation_glo85"]
resource_name = "Iddle"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_ayeem"]
resource_name = "Jump"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2)]
}

[sub_resource type="Animation" id="Animation_1xxtv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Vampurv1Ingrid:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_2mpaa"]
resource_name = "Run"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_jtfgi"]
resource_name = "Shot"
length = 0.09
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vampurv1Ingrid:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3478u"]
_data = {
"Die": SubResource("Animation_jimqq"),
"Iddle": SubResource("Animation_glo85"),
"Jump": SubResource("Animation_ayeem"),
"RESET": SubResource("Animation_1xxtv"),
"Run": SubResource("Animation_2mpaa"),
"Shot": SubResource("Animation_jtfgi")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42vv7"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjbwr"]
animation = &"Iddle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0brns"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ihdxp"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d6l6p"]
animation = &"Shot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ylte"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5xea3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ooxgq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iq1qt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uolpr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_riga6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3uwh6"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_omfd3"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0eos7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7ve20"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7tlgr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nptqd"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4peqk"]
states/Die/node = SubResource("AnimationNodeAnimation_42vv7")
states/Die/position = Vector2(1018, 425)
states/End/position = Vector2(1327, 417)
states/Iddle/node = SubResource("AnimationNodeAnimation_fjbwr")
states/Iddle/position = Vector2(420, 363)
states/Jump/node = SubResource("AnimationNodeAnimation_0brns")
states/Jump/position = Vector2(712, 311)
states/Run/node = SubResource("AnimationNodeAnimation_ihdxp")
states/Run/position = Vector2(724, 169)
states/Shot/node = SubResource("AnimationNodeAnimation_d6l6p")
states/Shot/position = Vector2(712, 573)
states/Start/position = Vector2(53, 363)
transitions = ["Start", "Iddle", SubResource("AnimationNodeStateMachineTransition_3ylte"), "Iddle", "Run", SubResource("AnimationNodeStateMachineTransition_5xea3"), "Run", "Iddle", SubResource("AnimationNodeStateMachineTransition_ooxgq"), "Iddle", "Jump", SubResource("AnimationNodeStateMachineTransition_iq1qt"), "Jump", "Iddle", SubResource("AnimationNodeStateMachineTransition_uolpr"), "Iddle", "Shot", SubResource("AnimationNodeStateMachineTransition_riga6"), "Shot", "Iddle", SubResource("AnimationNodeStateMachineTransition_3uwh6"), "Die", "End", SubResource("AnimationNodeStateMachineTransition_omfd3"), "Iddle", "Die", SubResource("AnimationNodeStateMachineTransition_0eos7"), "Jump", "Die", SubResource("AnimationNodeStateMachineTransition_7ve20"), "Run", "Die", SubResource("AnimationNodeStateMachineTransition_7tlgr"), "Shot", "Die", SubResource("AnimationNodeStateMachineTransition_nptqd")]
graph_offset = Vector2(-218, 189)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_au11u")

[node name="Vampurv1Ingrid" type="Sprite2D" parent="."]
texture = ExtResource("2_fm6vt")
hframes = 9
vframes = 9
frame = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.84, 0.84)
shape = SubResource("RectangleShape2D_ecbs4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3478u")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
tree_root = SubResource("AnimationNodeStateMachine_4peqk")
anim_player = NodePath("../AnimationPlayer")

[node name="VampurrJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s5s15")

[node name="VampurrDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ariov")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ecbs4")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
